alterações necessarias